Fix scales of the images and align the content page to centre

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ main {
     margin: 3rem 8rem;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 main div section {
@@ -193,7 +194,6 @@ hr {
 
 .card-img {
     width: 150px;
-    height: 133px;
     margin-top: 17px;
     margin-bottom: 28px;
 }
@@ -208,7 +208,6 @@ hr {
 /* Recent posts */
 .post-card-img {
     width: 150px;
-    height: 87px;
     margin-top: 17px;
     margin-bottom: 10px;
 }
@@ -332,10 +331,6 @@ footer p {
     .post-right-section {
         margin-left: 0;
         margin-bottom: 4rem;
-    }
-
-    .post {
-        flex-direction: column;
     }
 
     /* Right section */
